# dotfiles

./: .editorconfig  .env.example  .gitignore  .gitmodules  .nvim.lua  README.md  Taskfile.yaml  lefthook.yml  project.nimble  pyproject.toml  renovate.json5  settings.toml  settings.yaml  stylua.toml  vim.toml
.github/workflows/: ci.yaml
app/HOME/: Taskfile.yaml
app/NeoVim/: init.lua  lazy-lock.json
app/NeoVim.2026/: lazy-lock.json
app/Nushell/: .gitignore  aliases.nu  commands.nu  config.nu
app/Nushell/app/: nvim.nu  zellij.nu
app/Rio/: config.toml
app/Scoop/: Taskfile.yaml  scoop-lock.json
app/Task/: Taskfile.yaml
app/WezTerm/: .gitignore  wezterm.lua
app/Zed/: .gitignore  keymap.json
app/Zellij/: config.kdl
app/aqua/: Taskfile.yaml  aqua.yaml
app/aqua/registry/: yaskkserv2.yaml
aqua/: aqua-policy.yaml  aqua.yaml
aqua/registry/: copilot-cli.yaml  frankenphp.yaml  gigi.yaml
config/wezterm/: wezterm.lua
docs/: conf.py  index.rst  layer.rst
docs/app/: aqua.rst  index.rst  nushell.rst  zellij.rst
docs/extra/: index.rst  nim.rst
docs/note/: index.rst
docs/setup/: index.rst
docs/usage/: index.rst  update.rst
files/: .editorconfig  .gitattributes  scoop-lock.json  winget.json
programs/AutoHotkey/: default.ahk  readme.md
root/: .harper-dict.txt  .zshenv  .zshrc  Taskfile.yaml  aqua.yaml
root/.config/: starship.toml
scripts/: setup.nu  sync-bun-tools.nu  sync-uv-tools.nu  zed-settings.py
scripts/gitignore/: generate.py
scripts/setup/: archlinux.sh  windows.ps1
src/: zed_settings.nim
tools/: setup
(+61 files in other folders)
